--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-swipe": "^5.0.5",
     "redux": "^3.5.2",
     "swipe-js-iso": "^2.0.3",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^1.0.0",
+    "material-ui":"^0.19.1"
   }
 }
