--- a/package.json
+++ b/package.json
@@ -39,16 +39,17 @@
   "dependencies": {
     "es6-promise": "^3.2.1",
     "immutable": "^3.8.1",
+    "material-ui": "^0.19.1",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.1",
     "react-addons-pure-render-mixin": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-layer": "^2.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-swipe": "^5.0.5",
     "redux": "^3.5.2",
     "swipe-js-iso": "^2.0.3",
-    "whatwg-fetch": "^1.0.0",
-    "material-ui":"^0.19.1"
+    "whatwg-fetch": "^1.0.0"
   }
 }
