--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router": "^2.7.0",
     "react-swipe": "^5.0.5",
     "redux": "^3.5.2",
+    "rsuite": "^1.1.3",
     "swipe-js-iso": "^2.0.3",
     "whatwg-fetch": "^1.0.0"
   }
